# opencl-image-processing

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
include/: image_processor.hpp  opencl_manager.hpp
include/processors/: crop_processor.hpp  grayscale_processor.hpp  halftone_processor.hpp
kernels/: crop.cl  grayscale.cl  halftone.cl
resources/: input.tiff
src/: image_processor.cpp  main.cpp  opencl_manager.cpp
src/processors/: crop_processor.cpp  grayscale_processor.cpp  halftone_processor.cpp
tests/: CMakeLists.txt  test_crop.cpp  test_grayscale.cpp  test_halftone.cpp  test_image_io.cpp
